# capstone-d03

./: .gitignore  Wall_Following.py  graph-nwx.py  graph-track.py  maze_robot_wall.py  nozzleoutputplot.py  robot_kinematics.py  robot_turning_kinematics.py  senpro-grafik.py  wall_simulation.py
robot-maze-simulation/src/: field.py  main.py  maze.py  maze_robot_utils.py  robot.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/wall_detector_robot/share/wall_detector_robot/: package.bash  package.zsh
ros2_ws/src/wall_detector_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/wall_detector_robot/launch/: wall_detector.launch.py
ros2_ws/src/wall_detector_robot/maps/: wall_maps.py
ros2_ws/src/wall_detector_robot/wall_detector_robot/: wall_detector.py
web/: QUICKSTART.md  README.md  mock-server.js  package-lock.json  package.json  test-pathfinding.js  vite.config.ts
web/src/: App.css  App.tsx
web/src/components/: MapNavigation.tsx  RFIDNavigation.tsx  RobotControl.tsx  SensorDisplay.tsx
web/src/services/: robotService.ts
web/src/types/: index.ts
web/src/utils/: pathfinding.ts
